added user folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 AppleEventInfoBug/AppleEventInfoBug.xcodeproj/project.xcworkspace/xcuserdata
 AppleEventInfoBug/AppleEventInfoBug.xcodeproj/xcuserdata
+TableViewCellAnimationBug/TableViewCellAnimationBug.xcodeproj/xcuserdata
