added sample project for demonstration of crash while using the camera combined with editing mode.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 AppleEventInfoBug/AppleEventInfoBug.xcodeproj/project.xcworkspace/xcuserdata
 AppleEventInfoBug/AppleEventInfoBug.xcodeproj/xcuserdata
 TableViewCellAnimationBug/TableViewCellAnimationBug.xcodeproj/xcuserdata
+ImagePickerAccessBug/ImagePickerAccessBug.xcodeproj/xcuserdata
