--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ AppleEventInfoBug/AppleEventInfoBug.xcodeproj/project.xcworkspace/xcuserdata
 AppleEventInfoBug/AppleEventInfoBug.xcodeproj/xcuserdata
 TableViewCellAnimationBug/TableViewCellAnimationBug.xcodeproj/xcuserdata
 ImagePickerAccessBug/ImagePickerAccessBug.xcodeproj/xcuserdata
+AppIconBug/AppIconBug.xcodeproj/project.xcworkspace/xcuserdata
+AppIconBug/AppIconBug.xcodeproj/xcuserdata
+ImagePickerAccessBug/ImagePickerAccessBug.xcodeproj/project.xcworkspace/xcuserdata
